Changes to INT properties

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -11,19 +11,22 @@
 ## ------------------------ App CLI Properties ---------------------------
 
 #product service url
+idms.env =INTG
 smsService.url=http://121.43.225.10
 newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
 newSMSHostName=sdk.entinfo.cn
 openAMService.url=https://identity-int.schneider-electric.com
-openDJService.url=http://10.155.116.187:8080
+openDJService.url=http://10.155.100.123:443
 identityService.url=https://identity-int.schneider-electric.com
-ifwService.url=https://cn.api-test.schneider-electric.com
+#ifwService.url=https://cn.api-test.schneider-electric.com
+ifwService.url=https://api.dev.se.com
+apigeeService.url=https://api.dev.se.com
 salesForceService.url=https://se--sitbfo19.cs17.my.salesforce.com
 goDigitalService.url=https://godigital-sqe2.cn.schneider-electric.com
 redirect.uri=https://identity-int.schneider-electric.com/openid/cb-basic.html
 countryKey=Country
 adminUserName=restApiTechnicalUser
-adminPassword=Schneider#123
+adminPassword=!dm$#ch1n@
 ifwClientId=N2s0I7Ifmxyf5gIDUUihdinmrRUa
 ifwClientSecret=Qy5VK5oQgquECwhXIugBY1aamQca
 salesForceClientId=3MVG9ahGHqp.k2_xWoKZZKzfq3qPpEtYznq0LFW0gSCwt4Nu3M2xOA4b6b_jP1jZh4bcmiQjRtgqpD0N79Oeg
@@ -31,9 +34,9 @@ salesForceClientSecret=777834498236067125
 salesForceUserName=idmschina.technicaluser@bridge-fo.com.sitbfo19
 salesForcePassword=idmschina#Idms1
 ha_mode=true
-
+app.properties.file = ${idmsc.app_root.location}/properties/application.${idms.env}.properties
 headerHostname=identity-int.schneider-electric.com
-openDJHostname=10.155.116.187
+openDJHostname=10.155.100.123
 conduct_name=https://identity-int.schneider-electric.com/.*
 jksPassword=Passw0rd
 #jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
@@ -43,10 +46,11 @@ jksFilePath=${idmsc.app_root.location}/keystores/INTG/NginxTomcat.jks
 #jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
 
 #SAML Assertion Signing Token Keystore Configuration
-keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
+keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/INTG/sit_keystore.jks
+#keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/INTG/SIT_00Dg0000006I0pD.jks
 keystore.samlAssertionSigning.keystore.password=Passw0rd
 keystore.samlAssertionSigning.keystore.privateKey.password=Passw0rd
-keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
+keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims_2020
 crypto.algo.samlAssertionSigning=SHA1WithRSA
 
 uims.application.name=idms
@@ -79,20 +83,20 @@ goDigitalValue=goDigital
 uimsClientId=uimsclient
 uimsClientSecret=uims@idms#2017
 
-userManagerUIMSWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV22/UserManager?wsdl
+userManagerUIMSWsdl=https://ims1w-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV22/UserManager?wsdl
 userManagerUIMSWsdlQname=http://uimsv22.impl.service.ims.schneider.com/
 userManagerUIMSWsdlPortName=UIMSV22_UserManagement
 
-userAccessManagerUIMSVWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV2/2WAuthenticated-UserAccessManager?wsdl
+userAccessManagerUIMSVWsdl=https://ims1w-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV2/2WAuthenticated-UserAccessManager?wsdl
 userAccessManagerUIMSQname=http://uimsv2.impl.service.ims.schneider.com/
 userAccessManagerUIMSVPortName=UIMSV2_UserAccessManagement
 
-authUserManaUIMSVWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV22/2WAuthenticated-UserManager?wsdl
+authUserManaUIMSVWsdl=https://ims1w-int.btsec.dev.schneider-electric.com/IMS-UserManager/UIMSV22/2WAuthenticated-UserManager?wsdl
 authUserManaUIMSVQname=http://uimsv22.impl.service.ims.schneider.com/
 authUserManaUIMSVPName=UIMSV22_UserAuthenticatedManagement
 
-#uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/CompanyManagement?wsdl
-uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/2WAuthenticated-CompanyManagement?wsdl
+#uimsCompanyManagerWsdl=https://ims1w-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/CompanyManagement?wsdl
+uimsCompanyManagerWsdl=https://ims1w-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/2WAuthenticated-CompanyManagement?wsdl
 uimsCompanyManagerQname=http://uimsv2.impl.company.service.ims.schneider.com/
 uimsCompanyManagerPortName=AuthenticatedCompanyManagementV2
 
@@ -111,7 +115,7 @@ openDJService.interface = com.idms.product.client.OpenDjService
 
 #openDJHostname=identity-int.schneider-electric.com
 
-openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
+openam.cxf.conduit.name=http://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
 #identityService.conduit.name=http://client.product.idms.com/.*
 identityService.conduit.name={http://client.product.idms.com/}IdentityService.http-conduit
@@ -141,6 +145,83 @@ send.invitation.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplat
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_CN
 send.invitation.email.template.cn =${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/Send_Invitation.html
 
+#mySchneiderPartnerPortal EmailTemplates 
+prm.self.registration.email.template.cn= ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_self_registration.html
+
+prm.self.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_self_registration.html
+
+prm.internal.registration.email.template.cn=${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_internal_registration.html
+
+prm.internal.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_internal_registration.html
+
+prm.eclipse.registration.email.template.cn=${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_eclipse_registration.html
+
+prm.eclipse.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_eclipse_registration.html
+
+user.registration.withpwd.email.template.blue.cn = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/User_registration_with_password.html
+
+user.registration.withpwd.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/User_registration_with_password.html
+user.add.email.template.blue.cn = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/User_AddEmail.html
+user.add.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/User_AddEmail.html
+user.reset.password.email.template.blue.cn = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/User_Reset_password.html
+user.reset.password.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/User_Reset_password.html
+user.update.email.template.blue.cn = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/User_Update.html
+user.update.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/User_Update.html
+user.default.email.template.blue.cn = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/User_default.html
+user.default.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/User_default.html
+send.invitation.email.template.blue.en = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/English/Send_Invitation.html
+send.invitation.email.template.blue.cn =${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/Chinese/Send_Invitation.html
+
+#Email OTP Template entries start
+
+#IDMS_USER_ADD_OTP_EMAILTEMPLATE_CN
+user.add.otp.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/otp/User_AddEmail.html
+#IDMS_USER_ADD_OTP_EMAILTEMPLATE_EN
+user.add.otp.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/otp/User_AddEmail.html
+#IDMS_USER_RESET_PASSWORD_OTP_EMAILTEMPLATE_CN
+user.reset.password.otp.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/otp/User_Reset_password.html
+#IDMS_USER_RESET_PASSWORD_OTP_EMAILTEMPLATE_EN
+user.reset.password.otp.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/otp/User_Reset_password.html
+#IDMS_USER_REGISTRATION_WITHPWD_OTP_EMAILTEMPLATE_CN
+user.registration.withpwd.otp.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/otp/User_registration_with_password.html
+#IDMS_USER_REGISTRATION_WITHPWD_OTP_EMAILTEMPLATE_EN
+user.registration.withpwd.otp.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/otp/User_registration_with_password.html
+#IDMS_USER_UPDATE_OTP_EMAILTEMPLATE_CN
+user.update.otp.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/otp/User_Update.html
+#IDMS_USER_UPDATE_OTP_EMAILTEMPLATE_EN
+user.update.otp.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/otp/User_Update.html
+#IDMS_USER_DEFAULT_OTP_EMAILTEMPLATE_CN
+user.default.otp.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/otp/User_default.html
+#IDMS_USER_DEFAULT_OTP_EMAILTEMPLATE_EN
+user.default.otp.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/otp/User_default.html
+
+#Email OTP Template Entries end.
+
+#Dynamic Email Template entries start
+
+#IDMS_USER_REGISTRATION_WITHPWD_OTP_EMAILTEMPLATE
+user.registration.withpwd.otp.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_registration_with_password_otp.html
+#IDMS_USER_REGISTRATION_WITHPWD_EMAILTEMPLATE
+user.registration.withpwd.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_registration_with_password_link.html
+#PRM_INTERNAL_USER_REGISTRATION_EMAILTEMPLATE
+prm.internal.registration.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/mySchneider_internal_registration_link.html
+#IDMS_USER_RESET_PASSWORD_OTP_EMAILTEMPLATE
+user.reset.password.otp.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_reset_password_otp.html
+#IDMS_USER_RESET_PASSWORD_EMAILTEMPLATE
+user.reset.password.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_reset_password_link.html
+#IDMS_USER_ADD_OTP_EMAILTEMPLATE
+user.add.otp.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_addemail_otp.html
+#IDMS_USER_ADD_EMAILTEMPLATE
+user.add.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_addemail_link.html
+#IDMS_USER_UPDATE_OTP_EMAILTEMPLATE
+user.update.otp.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_update_otp.html
+#IDMS_USER_UPDATE_EMAILTEMPLATE
+user.update.email.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_update_link.html
+#IDMS_USER_CHANGE_EMAIL_NOTIFICATION_TEMPLATE
+user.change.email.notification.template = ${idmsc.app_root.location}/HOTP/EmailTemplates/Dynamic/User_change_email_notification.html
+
+#Dynamic Email Template entries end
+
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
 fields.length.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSLENGTH.properties
@@ -158,6 +239,7 @@ fields.picklist.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIEL
 app.properties.dir = ${idmsc.app_root.location}/
 #EMAIL_TEMPLATE_DIR
 email.template.dir = ${idmsc.app_root.location}/HOTP/EmailTemplates/
+blue.email.template.dir = ${idmsc.app_root.location}/HOTP/EmailTemplatesBlue/
 cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
 
 # Contents of UimsConstants taken out as properties
@@ -166,12 +248,22 @@ caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
 
-#idms.ssl.trustStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
-#idms.ssl.trustStorePassword = Passw0rd
-#idms.ssl.keyStoreType = jks
-#idms.ssl.keyStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
-#idms.ssl.keyStorePassword = Passw0rd
-#idms.ssl.allowUnsafeRenegotiation = true
-#idms.ssl.allowLegacyHelloMessages = true
+idms.ssl.trustStore =${idmsc.app_root.location}/keystores/INTG/NginxTomcat.jks
+idms.ssl.trustStorePassword = Passw0rd
+idms.ssl.keyStoreType = jks
+idms.ssl.keyStore =${idmsc.app_root.location}/keystores/INTG/sit_keystore.jks
+idms.ssl.keyStorePassword = Passw0rd
+idms.ssl.allowUnsafeRenegotiation = true
+idms.ssl.allowLegacyHelloMessages = true
 
-sys.print.beans = true
+sys.print.beans=false
+
+#Key for domain name 
+domain.name = identity-int.schneider-electric.com
+enable.sendOtpOverEmail=true
+#default value of enableTestMailDomain is false
+enableTestMailDomain=false
+idmsc.emailUserNameFormat=FirstName
+idmsc.maintenance_mode_global=False
+#value can be ifw or apigee
+tokengenerationurl=apigee
