--- a/idmsc_restapi/schneider-idms-service/pom.xml
+++ b/idmsc_restapi/schneider-idms-service/pom.xml
@@ -48,7 +48,12 @@
 </repositories> -->
 
 	<dependencies>
-
+	<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+    </dependency>
+    
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-aop</artifactId>
