--- a/idmsc_restapi/schneider-idms/pom.xml
+++ b/idmsc_restapi/schneider-idms/pom.xml
@@ -14,7 +14,7 @@
 		<cxf.version>3.0.0</cxf.version>
 		<apache.httpcomponents.version>4.3.2</apache.httpcomponents.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
-		<compileSource>1.8</compileSource>
+		<!-- <compileSource>1.8</compileSource> -->
 		<!-- <version.jackson>2.5.0</version.jackson> -->
 		<version.jackson>2.6.3</version.jackson>
 		<!-- <version.jackson>2.5.0</version.jackson> -->
@@ -22,14 +22,30 @@
 		<version.log4j>2.1</version.log4j>
 		<version.slf4j>1.7.10</version.slf4j>
 		<logback.version>1.0.7</logback.version>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
+		<!-- <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+			<configuration>
+				<release>11</release>  <!--or <release>10</release> -->
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
   
 	<dependencyManagement>
 		<dependencies>
 			<!-- Internal -->
+			
+			
+			
 			 <dependency>
 				<groupId>com.schneider.idms</groupId>
 				<artifactId>product-service-client</artifactId>
