--- a/idmsc_restapi/schneider-idms-app/pom.xml
+++ b/idmsc_restapi/schneider-idms-app/pom.xml
@@ -1,27 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+	
 	<modelVersion>4.0.0</modelVersion>
-
+	
 	<groupId>com.schneider.idms</groupId>
 	<artifactId>schneider-idms-app</artifactId>
 	<packaging>jar</packaging>
-
+	
 	<parent>
 		<groupId>com.schneider</groupId>
-		<artifactId>schneider-idms</artifactId>
+  		<artifactId>schneider-idms</artifactId>
 		<relativePath>../schneider-idms/pom.xml</relativePath>
 		<version>1.0</version>
 	</parent>
-
+	
 	<properties>
-		<!-- <compileSource>1.8</compileSource> <maven.compiler.target>1.8</maven.compiler.target> 
-			<maven.compiler.source>1.8</maven.compiler.source> -->
+		<compileSource>1.8</compileSource>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.test.skip>true</maven.test.skip>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<profiles>
 		<profile>
 			<id>server</id>
@@ -36,20 +37,20 @@
 			<build>
 				<finalName>idms-app-install</finalName>
 				<plugins>
-					<plugin>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>prepare-package</phase>
-								<goals>
-									<goal>copy-dependencies</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${project.build.directory}/classes/war</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
+				  <plugin>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<executions>
+					  <execution>
+						<phase>prepare-package</phase>
+						<goals>
+						  <goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+						  <outputDirectory>${project.build.directory}/classes/war</outputDirectory>
+						</configuration>
+					  </execution>
+					</executions>
+				  </plugin>
 				</plugins>
 			</build>
 		</profile>
