--- a/idmsc_restapi/schneider-idms-client/pom.xml
+++ b/idmsc_restapi/schneider-idms-client/pom.xml
@@ -1,70 +1,55 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
+  <modelVersion>4.0.0</modelVersion>
+   
+  <parent>
 		<groupId>com.schneider</groupId>
-		<artifactId>schneider-idms</artifactId>
+  		<artifactId>schneider-idms</artifactId>
 		<version>1.0</version>
 		<relativePath>../schneider-idms/pom.xml</relativePath>
-	</parent>
-
-	<groupId>com.schneider.idms</groupId>
-	<artifactId>schneider-idms-client</artifactId>
-	<!-- <version>1.0</version> -->
-	<packaging>jar</packaging>
-
-
+ 	</parent>
+  
+  <groupId>com.schneider.idms</groupId>
+  <artifactId>schneider-idms-client</artifactId>
+  <!-- <version>1.0</version> -->
+  <packaging>jar</packaging>
+  
+	
 	<properties>
 		<cxf.version>3.0.0</cxf.version>
 		<apache.httpcomponents.version>4.3.2</apache.httpcomponents.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
-		<!-- <compileSource>1.8</compileSource> -->
+		<compileSource>1.8</compileSource>
 		<version.jackson>2.5.0</version.jackson>
 		<version.jsonpath>2.0.0</version.jsonpath>
-		<!-- <maven.compiler.target>1.8</maven.compiler.target> <maven.compiler.source>1.8</maven.compiler.source> -->
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<dependencies>
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.ws</groupId>
-			<artifactId>jaxws-api</artifactId>
-			<version>2.3.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>jaxws-ri</artifactId>
-			<version>2.3.2</version>
-			<type>pom</type>
-		</dependency>
 
 		<!-- UIMS WSDL auto-generated library imports -->
-		<!-- <dependency> <groupId>com.schneider.uims</groupId> <artifactId>uims-ws-int</artifactId> 
-			<version>1.0</version> </dependency> -->
-
-		<!-- <dependency> <groupId>com.schneider.uims</groupId> <artifactId>uims-ws-stg</artifactId> 
-			<version>1.0</version> </dependency> <dependency> <groupId>com.schneider.uims</groupId> 
-			<artifactId>uims-ws-pprd</artifactId> <version>1.0</version> </dependency> -->
-
+		<!-- <dependency>
+			<groupId>com.schneider.uims</groupId>
+			<artifactId>uims-ws-int</artifactId>
+			<version>1.0</version>
+		</dependency> -->
+		
+		<!-- <dependency>
+			<groupId>com.schneider.uims</groupId>
+			<artifactId>uims-ws-stg</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.schneider.uims</groupId>
+			<artifactId>uims-ws-pprd</artifactId>
+			<version>1.0</version>
+		</dependency> -->
+		
 		<!-- Java EE Replaced with individual Spec APIs -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
@@ -99,14 +84,14 @@
 			<version>${version.jackson}</version>
 			<scope>compile</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>${version.jackson}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
