--- a/idmsc_restapi/schneider-uims-ws/pom.xml
+++ b/idmsc_restapi/schneider-uims-ws/pom.xml
@@ -1,57 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	<modelVersion>4.0.0</modelVersion>
-
-	<!-- <parent> <groupId>com.schneider.uims</groupId> <artifactId>schneider-ws-main</artifactId> 
-		<version>1.0</version> <relativePath>../uims-ws-main/pom.xml</relativePath> 
-		</parent> -->
-	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
+  <modelVersion>4.0.0</modelVersion>
+   
+  <!-- <parent>
+		<groupId>com.schneider.uims</groupId>
+  		<artifactId>schneider-ws-main</artifactId>
+		<version>1.0</version>
+		<relativePath>../uims-ws-main/pom.xml</relativePath>
+ 	</parent> -->
+ 	<parent>
 		<groupId>com.schneider</groupId>
-		<artifactId>schneider-idms</artifactId>
+  		<artifactId>schneider-idms</artifactId>
 		<version>1.0</version>
 		<relativePath>../schneider-idms/pom.xml</relativePath>
-	</parent>
-
-	<groupId>com.schneider.uims</groupId>
-	<artifactId>schneider-uims-ws</artifactId>
-	<packaging>jar</packaging>
-
-
+ 	</parent>
+  
+  <groupId>com.schneider.uims</groupId>
+  <artifactId>schneider-uims-ws</artifactId>
+  <packaging>jar</packaging>
+  
+	
 	<properties>
-		<!-- <compileSource>1.8</compileSource> <maven.compiler.target>1.8</maven.compiler.target> 
-			<maven.compiler.source>1.8</maven.compiler.source> -->
+		<compileSource>1.8</compileSource>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<dependencies>
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.ws</groupId>
-			<artifactId>jaxws-api</artifactId>
-			<version>2.3.1</version>
-		</dependency>
 
-		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>jaxws-ri</artifactId>
-			<version>2.3.2</version>
-			<type>pom</type>
-		</dependency>
 	</dependencies>
 </project>
