--- a/idmsc_restapi/schneider-idms-service/pom.xml
+++ b/idmsc_restapi/schneider-idms-service/pom.xml
@@ -373,6 +373,12 @@
 				<artifactId>opencsv</artifactId>
 				<version>3.8</version>
 		</dependency>
+		<dependency>
+				<groupId>org.jmockit</groupId>
+				<artifactId>jmockit</artifactId>
+				<version>1.24</version>
+				<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	<!-- <version>1.0</version> -->
