--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -13,28 +13,9 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file idmsc_restapi/schneider-idms/pom.xml
-    - name: Upload IDMS.war
-      uses: actions/upload-artifact@v2
-      with:
-        path: /home/runner/work/cIAMTEST/cIAMTEST/idmsc_restapi/schneider-idms-service/target/IDMS.war
-    - name: Deploy the package to the remote server
-      uses: garygrossgarten/github-action-scp@release
-      with:
-       local: /home/runner/work/cIAMTEST/cIAMTEST/idmsc_restapi/schneider-idms-service/target/IDMS.war
-       remote: /home/sesa571469/ # My remote directory
-       host: ${{ secrets.HOST }}
-       username: ${{ secrets.USERNAME }}
-       password: ${{ secrets.PASSWORD }}
-       port: ${{ secrets.PORT }}
-      
-      
